# AllInOne

./: .gitignore  README.md  build.gradle  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/anc/allinone/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/std_handler/: std_handler.cpp  std_handler.h
app/src/main/java/com/anc/allinone/: MainActivity.java
app/src/main/java/com/anc/allinone/recyclerview/: RecyclerView.java  RecyclerViewActivity.java
app/src/main/res/layout/: activity_recview_demo.xml  rec_item1.xml  rec_item2.xml
app/src/main/res/values/: colors.xml  ids.xml
app/src/test/java/com/anc/allinone/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
